adds refresh tokens + more permissions
